test/libsolidity/syntaxTests/nameAndTypeResolution/invalid_fixed_types_7x8_mxn.sol
contract test {
    fixed7x8 c = 3.12345678;
}
// ----
// DeclarationError: (20-28): Identifier not found or not unique.
